2006-02-02 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpWebRequest.cs: dummy implementation of UnsafeAuthenticationBlah
	property.

2006-02-01  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* FtpRequestCreator.cs: 
	* FtpAsyncResult.cs:
	* FtpDataStream.cs:
	* FtpWebRequest.cs:
	* FtpWebResponse.cs: Initial implementation of FtpWebRequest (2.0)
	
2006-02-01  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* FtpStatusCode.cs: Fix a typo.
	
2006-01-26 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* WebClient.cs: (2.0) UploadString() returns string, not void.

2006-01-10 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpWebResponse.cs: ignore non-integer values for max-age and version.
	Fixes bug #77199. Thanks to Cyrille Colin.

2006-01-10 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpWebResponse.cs: cope with malformed cookies with '=' as value.
	Patch by Cyrille Colin. Fixes bug #77179.

2005-12-25  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* FtpStatusCode.cs: New 2.0 enum.

2005-12-09 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* CookieContainer.cs: fix matching of subdomains. Patch by Cyrille
	Colin.

2005-12-08 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpWebResponse.cs: don't loop forever when no name or value between
	semicolons. Fixes bug #76943.

2005-12-06 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpWebResponse.cs: don't fail if the cookie ends with a 'name'
	without a value. Fixes bug #76922.

2005-11-28 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* EndPointListener.cs:
	* HttpListenerRequest.cs: don't require the Host header for 1.0. Just
	map that to the '*' or '+' host.

2005-11-22 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* IPAddress.cs: the byte[] ctor supports length 4 in .NET 2.0.
	Fixes bug #76792.

2005-11-21 Senganal T   <tsenganal@novell.com>

	* Dns.cs : corrected a mistake in GetHostEntry ()

2005-11-21 Senganal T   <tsenganal@novell.com>
